<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/pseudo"
            android:layout_margin="5sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/pseudo_hint" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/niveau_enchere"
            android:layout_below="@+id/niveau_enchere"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_alignLeft="@+id/niveau_enchere" />

        <SeekBar
            android:id="@+id/niveau_enchere"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:indeterminate="false"
            android:progress="0"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp" />

        <Switch
            android:id="@+id/tooglePlafond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchMinWidth="100dp"
            android:checked="false"
            android:showText="true"
            android:splitTrack="false"
            android:text="@string/plafond"
            android:textOn="@string/plafond_activ"
            android:textOff="@string/plafond_desactiv"/>

        <RadioGroup
            android:id="@+id/plafond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:visibility="visible"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/x2"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/x2" />

            <RadioButton
                android:id="@+id/x3"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/x3" />

            <RadioButton
                android:id="@+id/x4"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/x4" />

            <RadioButton
                android:id="@+id/x5"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="@string/x5" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/acceptation_conditions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/accepter_les_conditions_d_utilisation" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bouton_annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleAnnuler"
                android:text="@string/annuler" />

            <Button
                android:id="@+id/bouton_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleOk"
                android:text="@string/ok" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
