<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnchereEnCoursActivity">

    <ImageView
        android:id="@+id/imageProduit"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:contentDescription="ImageArticle"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        tools:src="@drawable/morty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="288dp"
        android:layout_height="126dp"
        tools:text="C'est une maison bleu, accroché a la coline ont y viens a pied on ne frappe pas ceux qui vivent la on perdu la cléééééé"
        app:layout_constraintStart_toEndOf="@+id/imageProduit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_prix_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prix de base :"
        app:layout_constraintStart_toStartOf="@+id/imageProduit"
        app:layout_constraintTop_toBottomOf="@+id/imageProduit" />

    <TextView
        android:id="@+id/prix_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        tools:text="@string/prix_base"
        app:layout_constraintStart_toEndOf="@+id/label_prix_base"
        app:layout_constraintBaseline_toBaselineOf="@id/label_prix_base"
        tools:layout_editor_absoluteY="91dp" />

    <TextView
        android:id="@+id/label_prix_encours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Prix en cours:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProduit" />

    <TextView
        android:id="@+id/prix_encours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="5dp"
        tools:text="@string/prix_encours"
        app:layout_constraintStart_toEndOf="@id/label_prix_encours"
        app:layout_constraintBaseline_toBaselineOf="@id/label_prix_encours" />

    <TextView
        android:id="@+id/label_meilleur_enchere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meilleur acheteur :"
        app:layout_constraintEnd_toStartOf="@id/meilleur_enchere"
        app:layout_constraintBaseline_toBaselineOf="@id/label_prix_base"
        />

    <TextView
        android:id="@+id/meilleur_enchere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        tools:text="@string/meilleur_enchereur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/label_meilleur_enchere"/>

    <TextView
        android:id="@+id/label_temps_restant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temps restant :"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toStartOf="@id/temps_restant"
        app:layout_constraintBaseline_toBaselineOf="@id/label_prix_encours" />

    <TextView
        android:id="@+id/temps_restant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        tools:text="24:00"
        app:layout_constraintBaseline_toBaselineOf="@id/label_prix_encours"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bouton_enchere"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="€"
        android:onClick="onClickSurEnchere"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="Bouton_enchere" />

    <ImageButton
        android:id="@+id/bouton_actu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:contentDescription="Bouton_enchere"
        android:onClick="onClickSurUpdate"
        android:src="@drawable/chargement"
        app:layout_constraintBottom_toTopOf="@id/bouton_enchere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>